--- a/configure.ac
+++ b/configure.ac
@@ -122,19 +122,22 @@ AC_ARG_WITH(lua,
 			AC_DEFINE([HAVE_LUA_H],1,
 				[Defined if building with liblua for server extension])
   			luaver=`lua -e 'v = string.gsub(_VERSION, ".* ", ""); print(v)'`
-  			MYCPPFLAGS="$MYCPPFLAGS -I/usr/include/lua$luaver -I/usr/local/include/lua$luaver"
-  			MYCPPFLAGS="$MYCPPFLAGS -I/usr/include/lua -I/usr/local/include/lua -D_MYLUA"
-  			MYCPPFLAGS="$MYCPPFLAGS -I/usr/include/lua -I/usr/local/include/lua -D_MYLUA"
-  			MYCPPFLAGS="$MYCPPFLAGS -I/usr/include/lua5.1 -D_MYLUA"
-  			MYLDFLAGS="$MYLDFLAGS -L/usr/include/lua$luaver -L/usr/local/include/lua$luaver"
-  			MYLDFLAGS="$MYLDFLAGS -L/usr/include/lua -L/usr/local/include/lua"
-  			CPATH="$CPATH:/usr/include/lua$luaver:/usr/local/include/lua$luaver"
-  			CPATH="$CPATH:/usr/include/lua:/usr/local/include/lua"
-  			MYCPPFLAGS="$CPATH -I/usr/include/lua5.1 -D_MYLUA"
-  			LIBRARY_PATH="$LIBRARY_PATH:/usr/lib/lua$luaver:/usr/local/lib/lua$luaver"
-  			LIBRARY_PATH="$LIBRARY_PATH:/usr/lib/lua:/usr/local/lib/lua"
-  			LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/include/lua$luaver:/usr/local/include/lua$luaver"
-  			LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/include/lua:/usr/local/include/lua"
+  			CPPFLAGS="$CPPFLAGS -I/usr/include/lua$luaver -I/usr/local/include/lua$luaver"
+  			CPPFLAGS="$CPPFLAGS -I/usr/include/lua -I/usr/local/include/lua -D_MYLUA"
+  			CPPFLAGS="$CPPFLAGS -I/usr/include/lua -I/usr/local/include/lua -D_MYLUA"
+  			CPPFLAGS="$CPPFLAGS -I/usr/include/lua5.1 -D_MYLUA"
+  			#LDFLAGS="$LDFLAGS -L/usr/include/lua$luaver -L/usr/local/include/lua$luaver"
+  			#LDFLAGS="$LDFLAGS -L/usr/include/lua -L/usr/local/include/lua"
+        LDFLAGS="$LDFLAGS -llua$luaver"
+  			#CPATH="$CPATH:/usr/include/lua$luaver:/usr/local/include/lua$luaver"
+  			#CPATH="$CPATH:/usr/include/lua:/usr/local/include/lua"
+  			CPPFLAGS="$CPPFLAGS $CPATH -I/usr/include/lua5.1 -D_MYLUA"
+        LIBS="$LIBS -llua$luaver"
+  			#LIBS="$LIBS:/usr/lib"
+  			#LIBS="$LIBS:/usr/lib/lua$luaver:/usr/local/lib/lua$luaver"
+  			#LIBS="$LIBS:/usr/lib/lua:/usr/local/lib/lua"
+  			#LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/include/lua$luaver:/usr/local/include/lua$luaver"
+  			#LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/include/lua:/usr/local/include/lua"
 				uselua="yes"
 			fi
 			])
